--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Listagem Pokémon - Semana do Zero ao Programador Contratado</title>
+
+	<title>Listagem Pokémon</title>
+
+	<link rel="icon" href="./src/imagens/pokeball-icon.ico">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -220,6 +223,11 @@
 					<li class="tipo inseto">Inseto</li>
 					<li class="tipo voador">Voador</li>
 				</ul>
+
+				<p class="descricao">Gosta de coletar mel das plantas. Suas asas batem tão rapidamente que acaba
+					deixando um rastro de poeira tóxica pelo ar. As asas resistem a água, permitindo-o voar em fortes
+					chuvas.
+				</p>
 			</li>
 
 		</ul>
